overflow bug solved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,6 @@ body{
     font-style: normal;
     font-variation-settings: "wdth" 100;
     width: 100%;
-    overflow: hidden;
 }
 
 /* Primary Styles Starts Here */
